--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
 	"type": "aurora-module",
 	"require": {
 		"php": ">=5.4.0",
-		"afterlogic/aurora-framework": "~0.6"
+		"afterlogic/aurora-framework": "~0.6",
+		"afterlogic/aurora-module-mail": "~0.6"
 	},
 	"extra": {
 		"installer-name": "MailChangePasswordCpanelPlugin",
