--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
 	"type": "aurora-module",
 	"require": {
 		"php": ">=5.4.0",
-		"afterlogic/aurora-framework": "~0.8"
+		"afterlogic/aurora-framework": "~0.8",
 		"afterlogic/aurora-module-mail": "~0.8"
 	},
 	"extra": {
